Fix cropping position

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1634,12 +1634,12 @@ ul#share-block {
 
 #avatar_crop_modal{
   .modal-dialog{
-    width: 612px; 
+    //width: 612px; 
     max-height: 100%;
   }
   #image-container{
-    width: 610px; 
-    height: 460px;
+    // width: 610px; 
+    // height: 460px;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -1648,12 +1648,12 @@ ul#share-block {
 
 #banner_crop_modal{
   .modal-dialog{
-    width: 702px; 
+    //width: 702px; 
     max-height: 100%;
   }
   #image-container{
-    width: 700px; 
-    height: 307px;
+    // width: 700px; 
+    // height: 307px;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 50% 50%;
